@@ -65,8 +65,10 @@ installPackage(Modelica, "");
 setMatchingAlgorithm("PFPlusExt");
 setIndexReductionMethod("dynamicStateSelection");
 
-print("Loading library");
-loadFile("{{ package_path }}/package.mo");
+// Get the MODELICAPATH, which by default is set to where OpenModelica installs its libraries
+modPat:=getModelicaPath();
+setModelicaPath(modPat + "{{ modelicaPathSeparator }}" + "{{  MODELICAPATH }}");
+
 print("Loading model");
 {{ commentStringNonModifiedModel }}print("Translating model");
 {{ commentStringNonModifiedModel }}translateModel({{ model }}, method="{{ solver }}", tolerance={{ rtol }}, numberOfIntervals={{ ncp }}, variableFilter=\"({filter})\");
